--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,15 @@
     <string name="app_name">Mes-Sage</string>
     <string name="action_settings">Settings</string>
     <string name="message_hint">Enter the message you want to send</string>
+    <string name="action_send">Send</string>
+    <string name="action_cancel">Cancel</string>
     <string-array name="frequency_array">
         <item>One Time</item>
         <item>Daily</item>
         <item>Monthly</item>
         <item>Yearly</item>
     </string-array>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
